<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:weightSum="4">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">


        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/p1buzzString"
            android:id="@+id/p14pbuzzbutton"
            android:background="@color/greenMain"
            android:textSize="@dimen/super_text"
            android:layout_margin="4dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/p2buzzString"
            android:id="@+id/p24pbutton"
            android:background="@color/blueMain"
            android:textSize="@dimen/super_text"
            android:layout_margin="4dp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/p3buzzString"
            android:id="@+id/p34pbuzzbutton"
            android:background="@color/yellowMain"
            android:textSize="@dimen/super_text"
            android:layout_margin="4dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/p4buzzString"
            android:id="@+id/p44pbuzzbutton"
            android:background="@color/redMain"
            android:textSize="@dimen/super_text"
            android:layout_margin="4dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"/>

    </LinearLayout>
</LinearLayout>
